--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,5 +21,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:21.0.2'
+    compile 'com.android.support:appcompat-v7:21.0.0'
+    compile 'com.google.android.gms:play-services:+'
+    androidTestCompile 'com.jayway.android.robotium:robotium-solo:5.2.1'
 }
